--- a/linear_models.Rmd
+++ b/linear_models.Rmd
@@ -5,12 +5,16 @@ date: "2024-11-07"
 output: github_document
 ---
 
+load packages
+
 ```{r}
 library(tidyverse)
 library(p8105.datasets)
 
 set.seed(1)
 ```
+
+load and clean dataset
 
 ```{r}
 data("nyc_airbnb")
@@ -22,6 +26,47 @@ nyc_airbnb =
     borough = neighbourhood_group,
     neighborhood = neighbourhood) |> 
   filter(borough != "Staten Island") |> 
-  select(price, stars, borough, neighborhood, room_type)
+  select(price, stars, borough, neighborhood, room_type) |> 
+  mutate(
+    borough = fct_infreq(borough),
+    room_type = fct_infreq(room_type))
 ```
+
+# fit some models
+
+```{r}
+fit = lm(price ~ stars, data = nyc_airbnb)
+
+summary(fit)
+
+names(summary(fit))
+
+coef(fit)
+
+fit |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value)
+
+fit |> 
+  broom::glance()
+```
+
+try a bit more complex 
+
+```{r}
+fit =
+  lm(price ~ stars + borough, data = nyc_airbnb)
+
+fit |> 
+  broom::tidy() |> 
+  select(term, estimate, p.value) |> 
+  mutate(
+    term = str_replace(term, "borough", "Borough:")
+  ) |> 
+  knitr::kable(digits = 3)
+```
+
+
+
+
 
