--- a/linear_models.Rmd
+++ b/linear_models.Rmd
@@ -66,7 +66,49 @@ fit |>
   knitr::kable(digits = 3)
 ```
 
+# some diagnostics
 
+(backtrack to some EDA)
+
+```{r}
+nyc_airbnb |> 
+  ggplot(aes(x = stars, y = price)) +
+  geom_point() +
+  stat_smooth(method = "lm")
+```
+
+most diagnostics use residuals
+
+```{r}
+modelr::add_residuals(nyc_airbnb, fit) |> 
+  ggplot(aes(x = resid)) +
+  geom_histogram()
+```
+
+```{r}
+modelr::add_residuals(nyc_airbnb, fit) |> 
+  ggplot(aes(x = borough,  y = resid)) +
+  geom_violin() +
+  ylim(-200, 500)
+```
+
+residuals against stars 
+
+```{r}
+modelr::add_residuals(nyc_airbnb, fit) |> 
+  ggplot(aes(x = stars,  y = resid)) +
+  geom_point()
+```
+
+residuals against fitted values
+
+```{r}
+nyc_airbnb |> 
+  modelr::add_residuals(fit) |> 
+  modelr::add_predictions(fit) |> 
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point()
+```
 
 
 
